[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/exploration/pace_selector.gd" id="1_pace"]

[node name="PaceSelector" type="PanelContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("1_pace")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Travel Pace"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SlowButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Slow"

[node name="NormalButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Normal"

[node name="FastButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Fast"

[node name="ModifiersLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Normal - 3 mph"
horizontal_alignment = 1
